# EasyCrop

./: .gitignore  LICENSE  README.md  app.spec  build_exe.bat  pyproject.toml  setup.cfg  video_cropper.spec
video_cropper/: __init__.py  app.py  core.py  ffmpeg_utils.py
