[build-system]
requires = [
    "setuptools>=64",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "video-cropper"
version = "0.1.0"
description = "Simple Tkinter video cropper powered by ffmpeg"
authors = [{name = "EasyCrop"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.3.0",
]

[tool.setuptools.packages.find]
include = ["video_cropper"]

[project.scripts]
video-cropper = "video_cropper.app:run"
