[metadata]
name = video-cropper
version = 0.1.0
description = Simple Tkinter video cropper powered by ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
author = EasyCrop

[options]
packages = find:
install_requires =
    Pillow>=10.3.0
python_requires = >=3.10

[options.entry_points]
console_scripts =
    video-cropper = video_cropper.app:run
